# simulated_chassis

./: .gitignore  README.md
src/simulated_chassis/: CMakeLists.txt  package.xml  plugin.xml
src/simulated_chassis/behavior_trees/: three_wheel_steering_controller.hpp
src/simulated_chassis/config/: localization_3d.lua  slam_3d_offline copy.lua  slam_3d_offline.lua  slam_3d_online.lua  slam_3d_online_optimized.lua
src/simulated_chassis/include/simulated_chassis/: chassis_controller.hpp  three_wheel_steering_controller.hpp
src/simulated_chassis/launch/: navigation.launch.py  slam3d_offline.launch.py  slam3d_online.launch.py  three_wheel_sim.launch.py  three_wheel_sim.launch_test.py
src/simulated_chassis/param/: nav2_params_3d.yaml  three_wheel_controllers.yaml
src/simulated_chassis/rviz/: cartographer_3d.rviz
src/simulated_chassis/src/: chassis_controller.cpp  cmd_vel_relay_node.cpp  gamepad_teleop_node.cpp  odom_relay_node.cpp  test.cpp  three_wheel_steering_controller.cpp
src/simulated_chassis/urdf/: three_wheel_chassis copy.xacro  three_wheel_chassis.xacro
src/simulated_chassis/world/: empty_world.sdf  robot_diff_speed.sdf  world.sdf  world_he.sdf  world_my.sdf  world_sm.sdf
