<?xml version="1.0"?>
<package format="3">
  <name>simulated_chassis</name>
  <version>0.0.0</version>
  <description>ROS 2 package for simulated robot chassis utilities and behaviors.</description>
  <maintainer email="user@example.com">jzt_robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>nav2_behavior_tree</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>jzt_robot_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>jzt_robot_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
